# rickroll

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: ci.yml
src/: main.rs
